Convert themes to double pagebase fix scrollbars.

--- a/css/style.css
+++ b/css/style.css
@@ -246,6 +246,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	float: none;
+	overflow-x: auto;
 }
 
 .internal_selector {
@@ -260,5 +261,18 @@ body {
 
 .item {
 	margin-top: 10px;
+	margin-right: 10px;
 	margin-bottom: 0px;
+}
+
+.internal_container {
+	display: flex;
+	flex-direction: column;
+}
+
+.internal_internal {
+	flex-grow: 3;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
 }
